[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Orbitron Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Orbitron Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://SFX/Mysterious2.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = -64.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 591.0
margin_top = 375.0
margin_right = 1201.0
margin_bottom = 577.0
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 610.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
text = "PONG"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 610.0
margin_bottom = 202.0

[node name="1Player" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 289.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
text = "1 Player"
flat = true

[node name="2Player" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 293.0
margin_right = 610.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
text = "2 Player"
flat = true

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/1Player" to="." method="_on_1Player_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/2Player" to="." method="_on_2Player_pressed"]
